--- a/include/views/default/seven/layout/html.body.phtml
+++ b/include/views/default/seven/layout/html.body.phtml
@@ -99,7 +99,7 @@
 
 
 
-		<a href="{{(isPhoneGap && 'fb://profile/372531956099058' || !isPhoneGap && 'http://facebook.com/crunchbutton')}}" target="_blank" class="facebook-like-link">
+		<a href="{{(hasFacebook && 'fb://profile/372531956099058' || !hasFacebook && 'http://facebook.com/crunchbutton')}}" target="_system" class="facebook-like-link">
 			<button class="facebook-like">
 				<i class="fa fa-facebook-square"></i> Like
 			</button>
