--- a/include/views/default/cockpit2/bundle/js.phtml
+++ b/include/views/default/cockpit2/bundle/js.phtml
@@ -12,7 +12,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.9/angular-animate.min.js"></script>
 
 <script src="//cdn.socket.io/socket.io-1.2.0.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.1/Chart.min.js"></script>
+<script src="/assets/cockpit/js/Chart.js"></script>
 
 <!-- Payment stuff -->
 <? /*
