--- a/include/views/default/cockpit2/frontend/drivers/drivers-docs-form.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-docs-form.phtml
@@ -160,6 +160,7 @@
 				</li>
 				<li>
 					<img src="/assets/cockpit/images/driver-payment-check.gif" />
+					<br>Most banks have your Account and Routing numbers ONLINE in your Account Information section.
 				</li>
 			</ul>
 		</div>
