Reconcile Prices on PEX #3993

--- a/include/views/default/cockpit2/frontend/pexcard/pexcard-report.phtml
+++ b/include/views/default/cockpit2/frontend/pexcard/pexcard-report.phtml
@@ -53,47 +53,45 @@
 			<thead>
 				<tr>
 					<td>Driver Name</td>
-					<td>Email</td>
-					<td>Number of Orders</td>
-					<td>Card Orders Spent</td>
-					<td>Pex Card Spent</td>
-					<td>Diff</td>
-					<td>Card and Cash Orders Spent</td>
-				</tr>
-			</thead>
-			<tbody>
-				<tr ng-repeat="driver in result.drivers_expenses">
-					<td><a href="/staff/{{driver.login}}">{{driver.driver}}</a></td>
-					<td><a href="mailto:{{driver.email}}">{{driver.email}}</a></td>
-					<td>{{driver.orders}}</td>
-					<td positive-or-negative-color="{{driver.card_amount}}">$ {{driver.card_amount | formatPrice}}</td>
-					<td positive-or-negative-color="{{driver.pexcard_amount}}">$ {{driver.pexcard_amount | formatPrice}}</td>
-					<td positive-or-negative-color="{{driver.diff}}">$ {{driver.diff | formatPrice}}</td>
-					<td positive-or-negative-color="{{driver.card_cash_amount}}">$ {{driver.card_cash_amount | formatPrice}}</td>
-				</tr>
-			</tbody>
-		</table>
-
-		<h2 class="title">
-			<span>Cards without driver</span>
-		</h2>
-
-		<table class="tb-grid tb-zebra">
-			<thead>
-				<tr>
-					<td>Card Serial</td>
+					<td>Serial</td>
 					<td>Last Four</td>
-					<td>Card Spent</td>
+					<td>Email</td>
+					<td>Orders</td>
+					<td>Pex Card Spent</td>
+					<td>Card Orders Spent</td>
+					<td>Card and Cash Orders Spent</td>
+					<td>Diff</td>
 				</tr>
 			</thead>
-			<tbody>
-				<tr ng-repeat="card in result.card_expenses">
+			<tbody ng-repeat="driver in result.drivers_expenses">
+				<tr>
 					<td>
-						<a title="Assign Pex Card to Driver" href="/pexcard/card/{{card.card_serial}}">{{card.card_serial}}</a>
+						<span ng-if="driver.login"><a href="/staff/{{driver.login}}">{{driver.driver}}</a></span>
+						<span ng-if="!driver.login">{{driver.driver}}</span>
 					</td>
-					<td>{{card.last_four}}</td>
-					<td>$ {{card.amount | formatPrice}}</td>
+					<td>{{driver.card_serial}}</td>
+					<td>{{driver.last_four}}</td>
+					<td>
+						<span ng-if="driver.login"><a href="mailto:{{driver.email}}">{{driver.email}}</a></span>
+					</td>
+					<td>{{driver.orders}}</td>
+					<td positive-or-negative-color="{{driver.pexcard_amount}}">$ {{driver.pexcard_amount | formatPrice}}</td>
+					<td positive-or-negative-color="{{driver.card_amount}}">$ {{driver.card_amount | formatPrice}}</td>
+					<td positive-or-negative-color="{{driver.card_cash_amount}}">$ {{driver.card_cash_amount | formatPrice}}</td>
+					<td positive-or-negative-color="{{driver.diff}}">$ {{driver.diff | formatPrice}}</td>
 				</tr>
+				<?php /*
+				<tr class="tb-mini-grid">
+					<th colspan="3"><strong>Date</strong></th>
+					<th colspan="3"><strong>Description</strong></th>
+					<th colspan="3"><strong>Amount</strong></th>
+				</tr>
+				<tr class="tb-mini-grid" ng-repeat="transaction in driver.transactions">
+					<td colspan="3">{{transaction.date}}</td>
+					<td colspan="3">{{transaction.description}}</td>
+					<td colspan="3" positive-or-negative-color="{{transaction.amount}}">$ {{transaction.amount | formatPrice}}</td>
+				</tr>
+				*/ ?>
 			</tbody>
 		</table>
 
