--- a/include/views/default/crunchbutton/frontend/order.phtml
+++ b/include/views/default/crunchbutton/frontend/order.phtml
@@ -38,10 +38,10 @@
 					<div class="divider"></div>
 				</div>
 				<div ng-if="order.reward.points && !order.reward.shared">
-					<div class="order-details-highlight">You just earned {{order.reward.points}} points! <strong>Double</strong> it by sharing on Facebook.<br><br></div>
+					<div class="order-details-highlight">You just earned {{order.reward.points}} points! A million points gets you a free delivery :)<br><br></div>
 				</div>
 				<div ng-show="order._new && referral.invite_url && referral.enabled">
-					Earn <b>Crunch Credit</b> for every new friend who orders with your shared link!
+					Earn a FREE DELIVERY for every new customer you refer with your link!
 					<br /><br />
 				</div>
 			</div>
